# shared-infra-incident-readiness

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.qlty/: qlty.toml
definitions/: dpa-clauses.yaml  incident-raci.yaml  notification-obligations.yaml  responsibility-matrix.yaml  scenarios.yaml
docs/: 01_responsibility_boundary.md  02_incident_raci_and_sla.md  03_dpa_clauses.md  04_tabletop_and_runbook.md  05_worked_example.md
examples/dpa/: sample-dpa-answers.yaml
examples/overlays/sample-company/: extra-clauses.yaml  extra-roles.yaml
examples/records/: sample-incident.json
examples/responsibility/: sample-oem-mail.yaml
examples/saas-operator/: saas-operator-delegation.yaml
examples/skills/incident-readiness-check/: SKILL.md
examples/skills/incident-runbook-render/: SKILL.md
schemas/: incident-record.schema.json
src/siir/: check_dpa.py  check_responsibility.py  cli.py  definitions.py  list_definitions.py  overlay.py  render_runbook.py  tabletop.py  validate_record.py
tests/: conftest.py  test_check_dpa.py  test_check_responsibility.py  test_cli.py  test_golden.py  test_overlay.py  test_render_runbook.py  test_validate_record.py
tests/golden/: check-dpa.json  check-responsibility.json  list-definitions.json  render-runbook.json  tabletop.json  validate-record.json
